Working wine picker

--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -175,6 +175,9 @@ footer
         display: block
 
 .wine-page-content
+  display: none
+  &.active
+    display: block
   .wine-page-text
   .wine-page-image
     position: relative
@@ -212,7 +215,7 @@ footer
     margin-right: 50px
     cursor: pointer
     position: relative
-    padding-bottom: 20px
+    padding-bottom: 15px
     vertical-align: top
     &:hover
       &:after
