--- a/public/css/main.css
+++ b/public/css/main.css
@@ -300,11 +300,19 @@ main#content .container {
   display: block;
 }
 
+/* line 177, sass/main.sass */
+.wine-page-content {
+  display: none;
+}
 /* line 179, sass/main.sass */
+.wine-page-content.active {
+  display: block;
+}
+/* line 182, sass/main.sass */
 .wine-page-content .wine-page-image {
   position: relative;
 }
-/* line 181, sass/main.sass */
+/* line 184, sass/main.sass */
 .wine-page-content .wine-page-image:before {
   content: "";
   display: block;
@@ -319,7 +327,7 @@ main#content .container {
   top: 110px;
   z-index: 0;
 }
-/* line 194, sass/main.sass */
+/* line 197, sass/main.sass */
 .wine-page-content .wine-page-image img {
   float: right;
   margin-right: 60px;
@@ -328,14 +336,14 @@ main#content .container {
   z-index: 1;
 }
 
-/* line 201, sass/main.sass */
+/* line 204, sass/main.sass */
 .wine-browser {
   width: 1000px;
   margin: 0 auto;
   text-align: justify;
   padding-top: 55px;
 }
-/* line 207, sass/main.sass */
+/* line 210, sass/main.sass */
 .wine-browser li {
   display: inline-block;
   width: 160px;
@@ -344,10 +352,10 @@ main#content .container {
   margin-right: 50px;
   cursor: pointer;
   position: relative;
-  padding-bottom: 20px;
+  padding-bottom: 15px;
   vertical-align: top;
 }
-/* line 218, sass/main.sass */
+/* line 221, sass/main.sass */
 .wine-browser li:hover:after {
   content: "";
   width: 66px;
@@ -359,32 +367,32 @@ main#content .container {
   left: 50%;
   margin-left: -33px;
 }
-/* line 228, sass/main.sass */
+/* line 231, sass/main.sass */
 .wine-browser li img {
   width: 140px;
   padding: 10px;
 }
-/* line 231, sass/main.sass */
+/* line 234, sass/main.sass */
 .wine-browser li:last-child {
   margin-right: 0;
 }
-/* line 233, sass/main.sass */
+/* line 236, sass/main.sass */
 .wine-browser li.active img {
   padding: 0;
   border: 10px solid #ed8f17;
 }
 @media screen and (min-width: 1180px) {
-  /* line 201, sass/main.sass */
+  /* line 204, sass/main.sass */
   .wine-browser {
     width: 1180px;
     padding-top: 20px;
   }
-  /* line 239, sass/main.sass */
+  /* line 242, sass/main.sass */
   .wine-browser li {
     width: 190px;
     margin-right: 57px;
   }
-  /* line 242, sass/main.sass */
+  /* line 245, sass/main.sass */
   .wine-browser li img {
     width: 170px;
   }
