Adding in secondary font (2/3)

--- a/public/css/sass/fonts.sass
+++ b/public/css/sass/fonts.sass
@@ -1,3 +1,10 @@
+@import url("//hello.myfonts.net/count/2d09fb")
+
+@font-face
+  font-family: 'P22MackinacMedium'
+  src: url('../fonts/2D09FB_0_0.eot')
+  src: url('../fonts/2D09FB_0_0.eot?#iefix') format("embedded-opentype"), url('../fonts/2D09FB_0_0.woff2') format("woff2"), url('../fonts/2D09FB_0_0.woff') format("woff"), url('../fonts/2D09FB_0_0.ttf') format("truetype")
+
 @font-face
   font-family: 'Nickyshand'
   src: url('../fonts/nickyshand_regular-webfont.eot')
