--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -22,10 +22,12 @@ $text-gray: #999999
 $text-black: #333333
 
 $handwriting: "Nickyshand", Tahoma, Geneva, sans-serif
+$serif: "P22MackinacMedium", Georgia, serif
 
 body
   background-color: #fff
   color: $text-black
+  font-family: $serif
 
 // Header and Footer Work
 
