--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,4 @@
+@import url("//hello.myfonts.net/count/2d09fb");
 /* line 17, ../../../../.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/compass-0.12.7/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -64,6 +65,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 }
 
 @font-face {
+  font-family: "P22MackinacMedium";
+  src: url("../fonts/2D09FB_0_0.eot");
+  src: url("../fonts/2D09FB_0_0.eot?#iefix") format("embedded-opentype"), url("../fonts/2D09FB_0_0.woff2") format("woff2"), url("../fonts/2D09FB_0_0.woff") format("woff"), url("../fonts/2D09FB_0_0.ttf") format("truetype");
+}
+
+@font-face {
   font-family: "Nickyshand";
   src: url("../fonts/nickyshand_regular-webfont.eot");
   src: url("../fonts/nickyshand_regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/nickyshand_regular-webfont.woff2") format("woff2"), url("../fonts/nickyshand_regular-webfont.woff") format("woff"), url("../fonts/nickyshand_regular-webfont.ttf") format("truetype"), url("../fonts/nickyshand_regular-webfont.svg#nickyshandregular") format("svg");
@@ -71,29 +78,30 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   font-style: normal;
 }
 
-/* line 26, sass/main.sass */
+/* line 27, sass/main.sass */
 body {
   background-color: white;
   color: #333333;
+  font-family: "P22MackinacMedium", Georgia, serif;
 }
 
-/* line 32, sass/main.sass */
+/* line 34, sass/main.sass */
 header {
   border-bottom: 30px solid #b24629;
   height: 482px;
   display: block;
 }
-/* line 33, sass/main.sass */
+/* line 35, sass/main.sass */
 #home header {
   height: 770px;
 }
-/* line 38, sass/main.sass */
+/* line 40, sass/main.sass */
 header .header-container {
   width: 1440px;
   margin: 0 auto;
   position: relative;
 }
-/* line 42, sass/main.sass */
+/* line 44, sass/main.sass */
 header nav {
   background-color: rgba(0, 0, 0, 0.35);
   height: 115px;
@@ -101,7 +109,7 @@ header nav {
   z-index: 1;
   position: relative;
 }
-/* line 48, sass/main.sass */
+/* line 50, sass/main.sass */
 header .logo {
   width: 300px;
   height: 92px;
@@ -111,56 +119,56 @@ header .logo {
   top: 10px;
   margin-left: -150px;
 }
-/* line 49, sass/main.sass */
+/* line 51, sass/main.sass */
 header .logo h1, header .logo h3 {
   text-indent: -10000px;
 }
-/* line 58, sass/main.sass */
+/* line 60, sass/main.sass */
 header .navigation {
   padding-top: 50px;
   display: inline-block;
   text-align: center;
 }
-/* line 62, sass/main.sass */
+/* line 64, sass/main.sass */
 header .navigation li {
   display: inline-block;
   text-transform: uppercase;
 }
 @media screen and (min-width: 1450px) {
-  /* line 58, sass/main.sass */
+  /* line 60, sass/main.sass */
   header .navigation {
     float: right;
   }
-  /* line 67, sass/main.sass */
+  /* line 69, sass/main.sass */
   header .navigation:first-of-type {
     float: left;
   }
-  /* line 69, sass/main.sass */
+  /* line 71, sass/main.sass */
   header .navigation:first-of-type li {
     margin-left: 45px;
     margin-right: 0;
   }
-  /* line 72, sass/main.sass */
+  /* line 74, sass/main.sass */
   header .navigation li {
     margin-right: 45px;
   }
 }
-/* line 76, sass/main.sass */
+/* line 78, sass/main.sass */
 header .navigation a {
   color: white;
   text-decoration: none;
 }
-/* line 79, sass/main.sass */
+/* line 81, sass/main.sass */
 header .navigation a.active {
   border-bottom: 3px solid white;
 }
-/* line 81, sass/main.sass */
+/* line 83, sass/main.sass */
 header .localization {
   position: absolute;
   top: 0;
   right: 45px;
 }
-/* line 85, sass/main.sass */
+/* line 87, sass/main.sass */
 header .localization li {
   padding: 7px 14px;
   background: white;
@@ -168,49 +176,49 @@ header .localization li {
   float: left;
   display: block;
 }
-/* line 91, sass/main.sass */
+/* line 93, sass/main.sass */
 header .localization li.active {
   background: #b24629;
 }
-/* line 93, sass/main.sass */
+/* line 95, sass/main.sass */
 header .localization li.active a {
   color: white;
 }
-/* line 95, sass/main.sass */
+/* line 97, sass/main.sass */
 header .localization li a {
   text-decoration: none;
   color: #999999;
 }
 
-/* line 98, sass/main.sass */
+/* line 100, sass/main.sass */
 footer {
   text-align: center;
   text-transform: uppercase;
   margin-top: 14px;
   margin-bottom: 50px;
 }
-/* line 103, sass/main.sass */
+/* line 105, sass/main.sass */
 footer ul {
   margin-bottom: 6px;
 }
-/* line 105, sass/main.sass */
+/* line 107, sass/main.sass */
 footer ul li {
   display: inline-block;
   padding: 0 25px;
   border-right: 1px solid #333333;
 }
-/* line 109, sass/main.sass */
+/* line 111, sass/main.sass */
 footer ul li:last-child {
   border-right: none;
 }
 
-/* line 112, sass/main.sass */
+/* line 114, sass/main.sass */
 .banners {
   height: 100%;
   position: relative;
   z-index: 0;
 }
-/* line 116, sass/main.sass */
+/* line 118, sass/main.sass */
 .banners .banner {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -224,40 +232,40 @@ footer ul li:last-child {
   color: white;
   font-size: 46px;
 }
-/* line 126, sass/main.sass */
+/* line 128, sass/main.sass */
 .banners .banner .banner-headline {
   max-width: 900px;
   margin: 0 auto;
   position: relative;
 }
-/* line 130, sass/main.sass */
+/* line 132, sass/main.sass */
 .banners #wine-page-banner {
   background-image: url('/images/banners/wine-banner.jpg?1421107543');
 }
 
-/* line 135, sass/main.sass */
+/* line 137, sass/main.sass */
 .container {
   width: 1005px;
   margin: 0 auto;
   position: relative;
 }
-/* line 139, sass/main.sass */
+/* line 141, sass/main.sass */
 #home main#content .container {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* line 142, sass/main.sass */
+/* line 144, sass/main.sass */
 main#content .container {
   margin-top: 80px;
   margin-bottom: 40px;
 }
-/* line 145, sass/main.sass */
+/* line 147, sass/main.sass */
 .container h1 {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 94px;
 }
 
-/* line 150, sass/main.sass */
+/* line 152, sass/main.sass */
 .page-content:after {
   content: "";
   clear: both;
@@ -265,54 +273,54 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 156, sass/main.sass */
+/* line 158, sass/main.sass */
 .page-content .page-image {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 160, sass/main.sass */
+/* line 162, sass/main.sass */
 .page-content .page-image img {
   width: 334px;
 }
-/* line 162, sass/main.sass */
+/* line 164, sass/main.sass */
 .page-content .page-text {
   float: left;
   width: 596px;
 }
-/* line 165, sass/main.sass */
+/* line 167, sass/main.sass */
 .page-content .page-text h1 {
   margin-bottom: 10px;
 }
-/* line 167, sass/main.sass */
+/* line 169, sass/main.sass */
 .page-content .page-text h2 {
   border-top: 1px solid #b24629;
   border-bottom: 1px solid #b24629;
   padding: 25px 0;
   margin: 35px 0;
 }
-/* line 172, sass/main.sass */
+/* line 174, sass/main.sass */
 .page-content .page-text .page-text-block {
   display: none;
 }
-/* line 174, sass/main.sass */
+/* line 176, sass/main.sass */
 .page-content .page-text .page-text-block.active {
   display: block;
 }
 
-/* line 177, sass/main.sass */
+/* line 179, sass/main.sass */
 .wine-page-content {
   display: none;
 }
-/* line 179, sass/main.sass */
+/* line 181, sass/main.sass */
 .wine-page-content.active {
   display: block;
 }
-/* line 182, sass/main.sass */
+/* line 184, sass/main.sass */
 .wine-page-content .wine-page-image {
   position: relative;
 }
-/* line 184, sass/main.sass */
+/* line 186, sass/main.sass */
 .wine-page-content .wine-page-image:before {
   content: "";
   display: block;
@@ -327,7 +335,7 @@ main#content .container {
   top: 110px;
   z-index: 0;
 }
-/* line 197, sass/main.sass */
+/* line 199, sass/main.sass */
 .wine-page-content .wine-page-image img {
   float: right;
   margin-right: 60px;
@@ -336,14 +344,14 @@ main#content .container {
   z-index: 1;
 }
 
-/* line 204, sass/main.sass */
+/* line 206, sass/main.sass */
 .wine-browser {
   width: 1000px;
   margin: 0 auto;
   text-align: justify;
   padding-top: 55px;
 }
-/* line 210, sass/main.sass */
+/* line 212, sass/main.sass */
 .wine-browser li {
   display: inline-block;
   width: 160px;
@@ -355,7 +363,7 @@ main#content .container {
   padding-bottom: 15px;
   vertical-align: top;
 }
-/* line 221, sass/main.sass */
+/* line 223, sass/main.sass */
 .wine-browser li:hover:after {
   content: "";
   width: 66px;
@@ -367,32 +375,32 @@ main#content .container {
   left: 50%;
   margin-left: -33px;
 }
-/* line 231, sass/main.sass */
+/* line 233, sass/main.sass */
 .wine-browser li img {
   width: 140px;
   padding: 10px;
 }
-/* line 234, sass/main.sass */
+/* line 236, sass/main.sass */
 .wine-browser li:last-child {
   margin-right: 0;
 }
-/* line 236, sass/main.sass */
+/* line 238, sass/main.sass */
 .wine-browser li.active img {
   padding: 0;
   border: 10px solid #ed8f17;
 }
 @media screen and (min-width: 1180px) {
-  /* line 204, sass/main.sass */
+  /* line 206, sass/main.sass */
   .wine-browser {
     width: 1180px;
     padding-top: 20px;
   }
-  /* line 242, sass/main.sass */
+  /* line 244, sass/main.sass */
   .wine-browser li {
     width: 190px;
     margin-right: 57px;
   }
-  /* line 245, sass/main.sass */
+  /* line 247, sass/main.sass */
   .wine-browser li img {
     width: 170px;
   }
