--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -212,12 +212,12 @@ footer
       background-repeat: no-repeat
       background-size: 458px 454px
       position: absolute
-      left: 0
+      right: -90px
       top: 110px
       z-index: 0
     img
       float: right
-      margin-right: 60px
+      margin-right: 5px
       width: 195px
       position: relative
       z-index: 1
