--- a/public/css/main.css
+++ b/public/css/main.css
@@ -123,52 +123,58 @@ header .logo {
 header .logo h1, header .logo h3 {
   text-indent: -10000px;
 }
-/* line 60, sass/main.sass */
+/* line 53, sass/main.sass */
+header .logo a {
+  width: 300px;
+  height: 92px;
+  display: block;
+}
+/* line 64, sass/main.sass */
 header .navigation {
   padding-top: 50px;
   display: inline-block;
   text-align: center;
 }
-/* line 64, sass/main.sass */
+/* line 68, sass/main.sass */
 header .navigation li {
   display: inline-block;
   text-transform: uppercase;
 }
 @media screen and (min-width: 1450px) {
-  /* line 60, sass/main.sass */
+  /* line 64, sass/main.sass */
   header .navigation {
     float: right;
   }
-  /* line 69, sass/main.sass */
+  /* line 73, sass/main.sass */
   header .navigation:first-of-type {
     float: left;
   }
-  /* line 71, sass/main.sass */
+  /* line 75, sass/main.sass */
   header .navigation:first-of-type li {
     margin-left: 45px;
     margin-right: 0;
   }
-  /* line 74, sass/main.sass */
+  /* line 78, sass/main.sass */
   header .navigation li {
     margin-right: 45px;
   }
 }
-/* line 78, sass/main.sass */
+/* line 82, sass/main.sass */
 header .navigation a {
   color: white;
   text-decoration: none;
 }
-/* line 81, sass/main.sass */
+/* line 85, sass/main.sass */
 header .navigation a.active {
   border-bottom: 3px solid white;
 }
-/* line 83, sass/main.sass */
+/* line 87, sass/main.sass */
 header .localization {
   position: absolute;
   top: 0;
   right: 45px;
 }
-/* line 87, sass/main.sass */
+/* line 91, sass/main.sass */
 header .localization li {
   padding: 7px 14px;
   background: white;
@@ -176,49 +182,87 @@ header .localization li {
   float: left;
   display: block;
 }
-/* line 93, sass/main.sass */
+/* line 97, sass/main.sass */
 header .localization li.active {
   background: #b24629;
 }
-/* line 95, sass/main.sass */
+/* line 99, sass/main.sass */
 header .localization li.active a {
   color: white;
 }
-/* line 97, sass/main.sass */
+/* line 101, sass/main.sass */
 header .localization li a {
   text-decoration: none;
   color: #999999;
 }
 
-/* line 100, sass/main.sass */
+/* line 104, sass/main.sass */
 footer {
   text-align: center;
   text-transform: uppercase;
   margin-top: 14px;
   margin-bottom: 50px;
 }
-/* line 105, sass/main.sass */
+/* line 109, sass/main.sass */
 footer ul {
   margin-bottom: 6px;
 }
-/* line 107, sass/main.sass */
+/* line 111, sass/main.sass */
 footer ul li {
   display: inline-block;
   padding: 0 25px;
   border-right: 1px solid #333333;
 }
-/* line 111, sass/main.sass */
+/* line 115, sass/main.sass */
 footer ul li:last-child {
   border-right: none;
 }
 
-/* line 114, sass/main.sass */
+/* line 118, sass/main.sass */
 .banners {
   height: 100%;
   position: relative;
   z-index: 0;
 }
-/* line 118, sass/main.sass */
+/* line 123, sass/main.sass */
+.banners .banner-dots {
+  position: relative;
+  z-index: 10;
+  top: 600px;
+}
+/* line 127, sass/main.sass */
+.banners .banner-dots li {
+  width: 15px;
+  height: 15px;
+  display: block;
+  cursor: pointer;
+  background-color: red;
+  margin-right: 15px;
+  display: inline-block;
+}
+/* line 136, sass/main.sass */
+.banners.banner_slideshow .banner {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 0;
+}
+/* line 143, sass/main.sass */
+.banners.banner_slideshow .banner.active {
+  opacity: 1;
+  z-index: 5;
+  -webkit-transition-property: opacity;
+  -moz-transition-property: opacity;
+  -o-transition-property: opacity;
+  transition-property: opacity;
+  -webkit-transition-duration: 2s;
+  -moz-transition-duration: 2s;
+  -o-transition-duration: 2s;
+  transition-duration: 2s;
+}
+/* line 149, sass/main.sass */
 .banners .banner {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -232,40 +276,40 @@ footer ul li:last-child {
   color: white;
   font-size: 46px;
 }
-/* line 128, sass/main.sass */
+/* line 159, sass/main.sass */
 .banners .banner .banner-headline {
   max-width: 900px;
   margin: 0 auto;
   position: relative;
 }
-/* line 132, sass/main.sass */
+/* line 163, sass/main.sass */
 .banners #wine-page-banner {
   background-image: url('/images/banners/wine-banner.jpg?1421107543');
 }
 
-/* line 137, sass/main.sass */
+/* line 168, sass/main.sass */
 .container {
   width: 1005px;
   margin: 0 auto;
   position: relative;
 }
-/* line 141, sass/main.sass */
+/* line 172, sass/main.sass */
 #home main#content .container {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* line 144, sass/main.sass */
+/* line 175, sass/main.sass */
 main#content .container {
   margin-top: 80px;
   margin-bottom: 40px;
 }
-/* line 147, sass/main.sass */
+/* line 178, sass/main.sass */
 .container h1 {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 94px;
 }
 
-/* line 152, sass/main.sass */
+/* line 183, sass/main.sass */
 .page-content:after {
   content: "";
   clear: both;
@@ -273,26 +317,26 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 158, sass/main.sass */
+/* line 189, sass/main.sass */
 .page-content .page-image {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 162, sass/main.sass */
+/* line 193, sass/main.sass */
 .page-content .page-image img {
   width: 334px;
 }
-/* line 164, sass/main.sass */
+/* line 195, sass/main.sass */
 .page-content .page-text {
   float: left;
   width: 596px;
 }
-/* line 167, sass/main.sass */
+/* line 198, sass/main.sass */
 .page-content .page-text h1 {
   margin-bottom: 45px;
 }
-/* line 169, sass/main.sass */
+/* line 200, sass/main.sass */
 .page-content .page-text h2 {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -304,7 +348,7 @@ main#content .container {
   height: 68px;
   position: relative;
 }
-/* line 177, sass/main.sass */
+/* line 208, sass/main.sass */
 .page-content .page-text h2:after {
   content: "";
   width: 25px;
@@ -319,40 +363,40 @@ main#content .container {
   background-position: 0 0;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 177, sass/main.sass */
+  /* line 208, sass/main.sass */
   .page-content .page-text h2:after {
     background-image: url("../images/site/accordion@2x.png");
     background-size: 25px 98px;
   }
 }
-/* line 189, sass/main.sass */
+/* line 220, sass/main.sass */
 .page-content .page-text h2.active:after {
   top: 20px;
   background-position: 0 bottom;
 }
-/* line 192, sass/main.sass */
+/* line 223, sass/main.sass */
 .page-content .page-text .page-text-block {
   display: none;
   margin: 35px 0;
 }
-/* line 195, sass/main.sass */
+/* line 226, sass/main.sass */
 .page-content .page-text .page-text-block.active {
   display: block;
 }
 
-/* line 198, sass/main.sass */
+/* line 229, sass/main.sass */
 .wine-page-content {
   display: none;
 }
-/* line 200, sass/main.sass */
+/* line 231, sass/main.sass */
 .wine-page-content.active {
   display: block;
 }
-/* line 203, sass/main.sass */
+/* line 234, sass/main.sass */
 .wine-page-content .wine-page-image {
   position: relative;
 }
-/* line 205, sass/main.sass */
+/* line 236, sass/main.sass */
 .wine-page-content .wine-page-image:before {
   content: "";
   display: block;
@@ -367,7 +411,7 @@ main#content .container {
   top: 110px;
   z-index: 0;
 }
-/* line 218, sass/main.sass */
+/* line 249, sass/main.sass */
 .wine-page-content .wine-page-image img {
   float: right;
   margin-right: 5px;
@@ -376,14 +420,14 @@ main#content .container {
   z-index: 1;
 }
 
-/* line 225, sass/main.sass */
+/* line 256, sass/main.sass */
 .wine-browser {
   width: 1000px;
   margin: 0 auto;
   text-align: justify;
   padding-top: 55px;
 }
-/* line 231, sass/main.sass */
+/* line 262, sass/main.sass */
 .wine-browser li {
   display: inline-block;
   width: 160px;
@@ -395,7 +439,7 @@ main#content .container {
   padding-bottom: 15px;
   vertical-align: top;
 }
-/* line 242, sass/main.sass */
+/* line 273, sass/main.sass */
 .wine-browser li:hover:after {
   content: "";
   width: 66px;
@@ -407,32 +451,32 @@ main#content .container {
   left: 50%;
   margin-left: -33px;
 }
-/* line 252, sass/main.sass */
+/* line 283, sass/main.sass */
 .wine-browser li img {
   width: 140px;
   padding: 10px;
 }
-/* line 255, sass/main.sass */
+/* line 286, sass/main.sass */
 .wine-browser li:last-child {
   margin-right: 0;
 }
-/* line 257, sass/main.sass */
+/* line 288, sass/main.sass */
 .wine-browser li.active img {
   padding: 0;
   border: 10px solid #ed8f17;
 }
 @media screen and (min-width: 1180px) {
-  /* line 225, sass/main.sass */
+  /* line 256, sass/main.sass */
   .wine-browser {
     width: 1180px;
     padding-top: 20px;
   }
-  /* line 263, sass/main.sass */
+  /* line 294, sass/main.sass */
   .wine-browser li {
     width: 190px;
     margin-right: 57px;
   }
-  /* line 266, sass/main.sass */
+  /* line 297, sass/main.sass */
   .wine-browser li img {
     width: 170px;
   }
