--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -50,6 +50,10 @@ header
   .logo
     h1, h3
       text-indent: -10000px
+    a
+      width: 300px
+      height: 92px
+      display: block
     width: 300px
     height: 92px
     background: image-url('site/logo.png') no-repeat 0 0
@@ -115,6 +119,33 @@ footer
   height: 100%
   position: relative
   z-index: 0
+  .banner-arrows
+  .banner-dots
+    position: relative
+    z-index: 10
+    top: 600px
+    li
+      width: 15px
+      height: 15px
+      display: block
+      cursor: pointer
+      background-color: red
+      margin-right: 15px
+      display: inline-block
+  &.banner_slideshow
+    .banner
+      position: absolute
+      left: 0
+      right: 0
+      top: 0
+      bottom: 0
+      opacity: 0
+      &.active
+        opacity: 1
+        z-index: 5
+        @include transition-property(opacity)
+        @include transition-duration(2s)
+      
   .banner
     @include box-sizing('border-box')
     display: block
