--- a/public/css/main.css
+++ b/public/css/main.css
@@ -224,23 +224,85 @@ footer ul li:last-child {
   position: relative;
   z-index: 0;
 }
-/* line 123, sass/main.sass */
-.banners .banner-dots {
-  position: relative;
+/* line 122, sass/main.sass */
+.banners .banner-arrows {
+  position: absolute;
   z-index: 10;
-  top: 600px;
+  top: 52%;
+  margin-top: -30px;
+  width: 100%;
 }
-/* line 127, sass/main.sass */
+/* line 128, sass/main.sass */
+.banners .banner-arrows li {
+  width: 32px;
+  height: 60px;
+  display: block;
+  position: absolute;
+  background-image: url("../images/site/arrows.png");
+  background-size: auto 60px;
+  background-repeat: no-repeat;
+  text-indent: -10000px;
+  cursor: pointer;
+  -webkit-transition-property: opacity;
+  -moz-transition-property: opacity;
+  -o-transition-property: opacity;
+  transition-property: opacity;
+  -webkit-transition-duration: 0.2s;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+}
+@media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
+  /* line 128, sass/main.sass */
+  .banners .banner-arrows li {
+    background-image: url("../images/site/arrows@2x.png");
+    background-size: 64px 60px;
+  }
+}
+/* line 140, sass/main.sass */
+.banners .banner-arrows li:hover {
+  opacity: 0.6;
+}
+/* line 142, sass/main.sass */
+.banners .banner-arrows li.previous {
+  background-position: top left;
+  left: 20px;
+}
+/* line 145, sass/main.sass */
+.banners .banner-arrows li.next {
+  background-position: top right;
+  right: 20px;
+}
+/* line 149, sass/main.sass */
+.banners .banner-dots {
+  position: absolute;
+  z-index: 10;
+  top: 657px;
+  left: 50%;
+}
+/* line 154, sass/main.sass */
 .banners .banner-dots li {
-  width: 15px;
-  height: 15px;
+  width: 22px;
+  height: 22px;
   display: block;
   cursor: pointer;
-  background-color: red;
-  margin-right: 15px;
+  background-color: white;
+  border-radius: 50%;
+  margin-right: 8px;
   display: inline-block;
 }
-/* line 136, sass/main.sass */
+/* line 163, sass/main.sass */
+.banners .banner-dots li:last-child {
+  margin-right: 0;
+}
+/* line 165, sass/main.sass */
+.banners .banner-dots li.active {
+  border: 3px solid white;
+  width: 16px;
+  height: 16px;
+  background-color: transparent;
+}
+/* line 171, sass/main.sass */
 .banners.banner_slideshow .banner {
   position: absolute;
   left: 0;
@@ -249,7 +311,7 @@ footer ul li:last-child {
   bottom: 0;
   opacity: 0;
 }
-/* line 143, sass/main.sass */
+/* line 178, sass/main.sass */
 .banners.banner_slideshow .banner.active {
   opacity: 1;
   z-index: 5;
@@ -257,12 +319,16 @@ footer ul li:last-child {
   -moz-transition-property: opacity;
   -o-transition-property: opacity;
   transition-property: opacity;
-  -webkit-transition-duration: 2s;
-  -moz-transition-duration: 2s;
-  -o-transition-duration: 2s;
-  transition-duration: 2s;
+  -webkit-transition-duration: 1s;
+  -moz-transition-duration: 1s;
+  -o-transition-duration: 1s;
+  transition-duration: 1s;
 }
-/* line 149, sass/main.sass */
+/* line 183, sass/main.sass */
+.banners.banner_slideshow .banner.previously_active {
+  opacity: 1;
+}
+/* line 185, sass/main.sass */
 .banners .banner {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -276,40 +342,40 @@ footer ul li:last-child {
   color: white;
   font-size: 46px;
 }
-/* line 159, sass/main.sass */
+/* line 195, sass/main.sass */
 .banners .banner .banner-headline {
   max-width: 900px;
   margin: 0 auto;
   position: relative;
 }
-/* line 163, sass/main.sass */
+/* line 199, sass/main.sass */
 .banners #wine-page-banner {
   background-image: url('/images/banners/wine-banner.jpg?1421107543');
 }
 
-/* line 168, sass/main.sass */
+/* line 204, sass/main.sass */
 .container {
   width: 1005px;
   margin: 0 auto;
   position: relative;
 }
-/* line 172, sass/main.sass */
+/* line 208, sass/main.sass */
 #home main#content .container {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* line 175, sass/main.sass */
+/* line 211, sass/main.sass */
 main#content .container {
   margin-top: 80px;
   margin-bottom: 40px;
 }
-/* line 178, sass/main.sass */
+/* line 214, sass/main.sass */
 .container h1 {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 94px;
 }
 
-/* line 183, sass/main.sass */
+/* line 219, sass/main.sass */
 .page-content:after {
   content: "";
   clear: both;
@@ -317,26 +383,26 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 189, sass/main.sass */
+/* line 225, sass/main.sass */
 .page-content .page-image {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 193, sass/main.sass */
+/* line 229, sass/main.sass */
 .page-content .page-image img {
   width: 334px;
 }
-/* line 195, sass/main.sass */
+/* line 231, sass/main.sass */
 .page-content .page-text {
   float: left;
   width: 596px;
 }
-/* line 198, sass/main.sass */
+/* line 234, sass/main.sass */
 .page-content .page-text h1 {
   margin-bottom: 45px;
 }
-/* line 200, sass/main.sass */
+/* line 236, sass/main.sass */
 .page-content .page-text h2 {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -348,7 +414,7 @@ main#content .container {
   height: 68px;
   position: relative;
 }
-/* line 208, sass/main.sass */
+/* line 244, sass/main.sass */
 .page-content .page-text h2:after {
   content: "";
   width: 25px;
@@ -363,40 +429,40 @@ main#content .container {
   background-position: 0 0;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 208, sass/main.sass */
+  /* line 244, sass/main.sass */
   .page-content .page-text h2:after {
     background-image: url("../images/site/accordion@2x.png");
     background-size: 25px 98px;
   }
 }
-/* line 220, sass/main.sass */
+/* line 256, sass/main.sass */
 .page-content .page-text h2.active:after {
   top: 20px;
   background-position: 0 bottom;
 }
-/* line 223, sass/main.sass */
+/* line 259, sass/main.sass */
 .page-content .page-text .page-text-block {
   display: none;
   margin: 35px 0;
 }
-/* line 226, sass/main.sass */
+/* line 262, sass/main.sass */
 .page-content .page-text .page-text-block.active {
   display: block;
 }
 
-/* line 229, sass/main.sass */
+/* line 265, sass/main.sass */
 .wine-page-content {
   display: none;
 }
-/* line 231, sass/main.sass */
+/* line 267, sass/main.sass */
 .wine-page-content.active {
   display: block;
 }
-/* line 234, sass/main.sass */
+/* line 270, sass/main.sass */
 .wine-page-content .wine-page-image {
   position: relative;
 }
-/* line 236, sass/main.sass */
+/* line 272, sass/main.sass */
 .wine-page-content .wine-page-image:before {
   content: "";
   display: block;
@@ -411,7 +477,7 @@ main#content .container {
   top: 110px;
   z-index: 0;
 }
-/* line 249, sass/main.sass */
+/* line 285, sass/main.sass */
 .wine-page-content .wine-page-image img {
   float: right;
   margin-right: 5px;
@@ -420,14 +486,14 @@ main#content .container {
   z-index: 1;
 }
 
-/* line 256, sass/main.sass */
+/* line 292, sass/main.sass */
 .wine-browser {
   width: 1000px;
   margin: 0 auto;
   text-align: justify;
   padding-top: 55px;
 }
-/* line 262, sass/main.sass */
+/* line 298, sass/main.sass */
 .wine-browser li {
   display: inline-block;
   width: 160px;
@@ -439,7 +505,7 @@ main#content .container {
   padding-bottom: 15px;
   vertical-align: top;
 }
-/* line 273, sass/main.sass */
+/* line 309, sass/main.sass */
 .wine-browser li:hover:after {
   content: "";
   width: 66px;
@@ -451,32 +517,32 @@ main#content .container {
   left: 50%;
   margin-left: -33px;
 }
-/* line 283, sass/main.sass */
+/* line 319, sass/main.sass */
 .wine-browser li img {
   width: 140px;
   padding: 10px;
 }
-/* line 286, sass/main.sass */
+/* line 322, sass/main.sass */
 .wine-browser li:last-child {
   margin-right: 0;
 }
-/* line 288, sass/main.sass */
+/* line 324, sass/main.sass */
 .wine-browser li.active img {
   padding: 0;
   border: 10px solid #ed8f17;
 }
 @media screen and (min-width: 1180px) {
-  /* line 256, sass/main.sass */
+  /* line 292, sass/main.sass */
   .wine-browser {
     width: 1180px;
     padding-top: 20px;
   }
-  /* line 294, sass/main.sass */
+  /* line 330, sass/main.sass */
   .wine-browser li {
     width: 190px;
     margin-right: 57px;
   }
-  /* line 297, sass/main.sass */
+  /* line 333, sass/main.sass */
   .wine-browser li img {
     width: 170px;
   }
