--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -120,18 +120,53 @@ footer
   position: relative
   z-index: 0
   .banner-arrows
-  .banner-dots
-    position: relative
+    position: absolute
     z-index: 10
-    top: 600px
+    top: 52%
+    margin-top: -30px
+    width: 100%
     li
-      width: 15px
-      height: 15px
+      width: 32px
+      height: 60px
+      display: block
+      position: absolute
+      @include hr-image('../images/site/arrows.png', '../images/site/arrows@2x.png')
+      background-size: auto 60px
+      background-repeat: no-repeat
+      text-indent: -10000px
+      cursor: pointer
+      @include transition-property(opacity)
+      @include transition-duration(0.2s)
+      &:hover
+        opacity: 0.6
+    li.previous
+      background-position: top left
+      left: 20px
+    li.next
+      background-position: top right
+      right: 20px
+
+  .banner-dots
+    position: absolute
+    z-index: 10
+    top: 657px
+    left: 50%
+    li
+      width: 22px
+      height: 22px
       display: block
       cursor: pointer
-      background-color: red
-      margin-right: 15px
+      background-color: #fff
+      border-radius: 50%
+      margin-right: 8px
       display: inline-block
+      &:last-child
+        margin-right: 0
+      &.active
+        border: 3px solid #fff
+        width: 16px
+        height: 16px
+        background-color: transparent
   &.banner_slideshow
     .banner
       position: absolute
@@ -144,8 +179,9 @@ footer
         opacity: 1
         z-index: 5
         @include transition-property(opacity)
-        @include transition-duration(2s)
-      
+        @include transition-duration(1s)
+      &.previously_active
+        opacity: 1
   .banner
     @include box-sizing('border-box')
     display: block
