--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,5 @@
 @import url("//hello.myfonts.net/count/2d09fb");
+@import url("//hello.myfonts.net/count/2d0c65");
 /* line 17, ../../../../.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/compass-0.12.7/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -78,30 +79,36 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   font-style: normal;
 }
 
-/* line 27, sass/main.sass */
+@font-face {
+  font-family: "AlternateGothicCom-No2";
+  src: url("../fonts/2D0C65_0_0.eot");
+  src: url("../fonts/2D0C65_0_0.eot?#iefix") format("embedded-opentype"), url("../fonts/2D0C65_0_0.woff2") format("woff2"), url("../fonts/2D0C65_0_0.woff") format("woff"), url("../fonts/2D0C65_0_0.ttf") format("truetype");
+}
+
+/* line 28, sass/main.sass */
 body {
   background-color: white;
   color: #333333;
   font-family: "P22MackinacMedium", Georgia, serif;
 }
 
-/* line 34, sass/main.sass */
+/* line 35, sass/main.sass */
 header {
   border-bottom: 30px solid #b24629;
   height: 482px;
   display: block;
 }
-/* line 35, sass/main.sass */
+/* line 36, sass/main.sass */
 #home header {
   height: 770px;
 }
-/* line 40, sass/main.sass */
+/* line 41, sass/main.sass */
 header .header-container {
   width: 1440px;
   margin: 0 auto;
   position: relative;
 }
-/* line 44, sass/main.sass */
+/* line 45, sass/main.sass */
 header nav {
   background-color: rgba(0, 0, 0, 0.35);
   height: 115px;
@@ -109,7 +116,7 @@ header nav {
   z-index: 1;
   position: relative;
 }
-/* line 50, sass/main.sass */
+/* line 51, sass/main.sass */
 header .logo {
   width: 300px;
   height: 92px;
@@ -119,62 +126,64 @@ header .logo {
   top: 10px;
   margin-left: -150px;
 }
-/* line 51, sass/main.sass */
+/* line 52, sass/main.sass */
 header .logo h1, header .logo h3 {
   text-indent: -10000px;
 }
-/* line 53, sass/main.sass */
+/* line 54, sass/main.sass */
 header .logo a {
   width: 300px;
   height: 92px;
   display: block;
 }
-/* line 64, sass/main.sass */
+/* line 65, sass/main.sass */
 header .navigation {
-  padding-top: 50px;
+  padding-top: 51px;
   display: inline-block;
   text-align: center;
 }
-/* line 68, sass/main.sass */
+/* line 69, sass/main.sass */
 header .navigation li {
   display: inline-block;
   text-transform: uppercase;
 }
 @media screen and (min-width: 1450px) {
-  /* line 64, sass/main.sass */
+  /* line 65, sass/main.sass */
   header .navigation {
     float: right;
   }
-  /* line 73, sass/main.sass */
+  /* line 74, sass/main.sass */
   header .navigation:first-of-type {
     float: left;
   }
-  /* line 75, sass/main.sass */
+  /* line 76, sass/main.sass */
   header .navigation:first-of-type li {
-    margin-left: 45px;
+    margin-left: 68px;
     margin-right: 0;
   }
-  /* line 78, sass/main.sass */
+  /* line 79, sass/main.sass */
   header .navigation li {
     margin-right: 45px;
   }
 }
-/* line 82, sass/main.sass */
+/* line 81, sass/main.sass */
 header .navigation a {
+  font-size: 18px;
   color: white;
   text-decoration: none;
+  padding-bottom: 10px;
 }
-/* line 85, sass/main.sass */
+/* line 86, sass/main.sass */
 header .navigation a.active {
-  border-bottom: 3px solid white;
+  border-bottom: 5px solid white;
 }
-/* line 87, sass/main.sass */
+/* line 88, sass/main.sass */
 header .localization {
   position: absolute;
   top: 0;
   right: 45px;
 }
-/* line 91, sass/main.sass */
+/* line 92, sass/main.sass */
 header .localization li {
   padding: 7px 14px;
   background: white;
@@ -182,49 +191,50 @@ header .localization li {
   float: left;
   display: block;
 }
-/* line 97, sass/main.sass */
+/* line 98, sass/main.sass */
 header .localization li.active {
   background: #b24629;
 }
-/* line 99, sass/main.sass */
+/* line 100, sass/main.sass */
 header .localization li.active a {
   color: white;
 }
-/* line 101, sass/main.sass */
+/* line 102, sass/main.sass */
 header .localization li a {
   text-decoration: none;
   color: #999999;
 }
 
-/* line 104, sass/main.sass */
+/* line 105, sass/main.sass */
 footer {
   text-align: center;
   text-transform: uppercase;
   margin-top: 14px;
   margin-bottom: 50px;
-}
-/* line 109, sass/main.sass */
-footer ul {
-  margin-bottom: 6px;
+  font-size: 14px;
 }
 /* line 111, sass/main.sass */
+footer ul {
+  margin-bottom: 10px;
+}
+/* line 113, sass/main.sass */
 footer ul li {
   display: inline-block;
   padding: 0 25px;
   border-right: 1px solid #333333;
 }
-/* line 115, sass/main.sass */
+/* line 117, sass/main.sass */
 footer ul li:last-child {
   border-right: none;
 }
 
-/* line 118, sass/main.sass */
+/* line 120, sass/main.sass */
 .banners {
   height: 100%;
   position: relative;
   z-index: 0;
 }
-/* line 122, sass/main.sass */
+/* line 124, sass/main.sass */
 .banners .banner-arrows {
   position: absolute;
   z-index: 10;
@@ -232,7 +242,7 @@ footer ul li:last-child {
   margin-top: -30px;
   width: 100%;
 }
-/* line 128, sass/main.sass */
+/* line 130, sass/main.sass */
 .banners .banner-arrows li {
   width: 32px;
   height: 60px;
@@ -253,34 +263,34 @@ footer ul li:last-child {
   transition-duration: 0.2s;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 128, sass/main.sass */
+  /* line 130, sass/main.sass */
   .banners .banner-arrows li {
     background-image: url("../images/site/arrows@2x.png");
     background-size: 64px 60px;
   }
 }
-/* line 140, sass/main.sass */
+/* line 142, sass/main.sass */
 .banners .banner-arrows li:hover {
   opacity: 0.6;
 }
-/* line 142, sass/main.sass */
+/* line 144, sass/main.sass */
 .banners .banner-arrows li.previous {
   background-position: top left;
   left: 20px;
 }
-/* line 145, sass/main.sass */
+/* line 147, sass/main.sass */
 .banners .banner-arrows li.next {
   background-position: top right;
   right: 20px;
 }
-/* line 149, sass/main.sass */
+/* line 151, sass/main.sass */
 .banners .banner-dots {
   position: absolute;
   z-index: 10;
   top: 657px;
   left: 50%;
 }
-/* line 154, sass/main.sass */
+/* line 156, sass/main.sass */
 .banners .banner-dots li {
   width: 22px;
   height: 22px;
@@ -291,18 +301,18 @@ footer ul li:last-child {
   margin-right: 8px;
   display: inline-block;
 }
-/* line 163, sass/main.sass */
+/* line 165, sass/main.sass */
 .banners .banner-dots li:last-child {
   margin-right: 0;
 }
-/* line 165, sass/main.sass */
+/* line 167, sass/main.sass */
 .banners .banner-dots li.active {
   border: 3px solid white;
   width: 16px;
   height: 16px;
   background-color: transparent;
 }
-/* line 171, sass/main.sass */
+/* line 173, sass/main.sass */
 .banners.banner_slideshow .banner {
   position: absolute;
   left: 0;
@@ -311,7 +321,7 @@ footer ul li:last-child {
   bottom: 0;
   opacity: 0;
 }
-/* line 178, sass/main.sass */
+/* line 180, sass/main.sass */
 .banners.banner_slideshow .banner.active {
   opacity: 1;
   z-index: 5;
@@ -324,11 +334,11 @@ footer ul li:last-child {
   -o-transition-duration: 1s;
   transition-duration: 1s;
 }
-/* line 183, sass/main.sass */
+/* line 185, sass/main.sass */
 .banners.banner_slideshow .banner.previously_active {
   opacity: 1;
 }
-/* line 185, sass/main.sass */
+/* line 187, sass/main.sass */
 .banners .banner {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -342,40 +352,51 @@ footer ul li:last-child {
   color: white;
   font-size: 46px;
 }
-/* line 195, sass/main.sass */
-.banners .banner .banner-headline {
+/* line 197, sass/main.sass */
+.banners .banner .banner-headline-container {
   max-width: 900px;
   margin: 0 auto;
   position: relative;
+  display: table;
+  height: 93%;
 }
-/* line 199, sass/main.sass */
+/* line 203, sass/main.sass */
+.banners .banner .banner-headline {
+  font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
+  font-size: 46px;
+  line-height: 58px;
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center;
+}
+/* line 210, sass/main.sass */
 .banners #wine-page-banner {
   background-image: url('/images/banners/wine-banner.jpg?1421107543');
 }
 
-/* line 204, sass/main.sass */
+/* line 215, sass/main.sass */
 .container {
   width: 1005px;
   margin: 0 auto;
   position: relative;
 }
-/* line 208, sass/main.sass */
+/* line 219, sass/main.sass */
 #home main#content .container {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* line 211, sass/main.sass */
+/* line 222, sass/main.sass */
 main#content .container {
   margin-top: 80px;
   margin-bottom: 40px;
 }
-/* line 214, sass/main.sass */
+/* line 225, sass/main.sass */
 .container h1 {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 94px;
 }
 
-/* line 219, sass/main.sass */
+/* line 230, sass/main.sass */
 .page-content:after {
   content: "";
   clear: both;
@@ -383,38 +404,42 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 225, sass/main.sass */
+/* line 236, sass/main.sass */
 .page-content .page-image {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 229, sass/main.sass */
+/* line 240, sass/main.sass */
 .page-content .page-image img {
   width: 334px;
 }
-/* line 231, sass/main.sass */
+/* line 242, sass/main.sass */
 .page-content .page-text {
   float: left;
   width: 596px;
 }
-/* line 234, sass/main.sass */
+/* line 245, sass/main.sass */
 .page-content .page-text h1 {
   margin-bottom: 45px;
 }
-/* line 236, sass/main.sass */
+/* line 247, sass/main.sass */
 .page-content .page-text h2 {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   border-top: 1px solid #b24629;
   border-bottom: 1px solid #b24629;
-  padding: 25px 0;
   margin-bottom: -1px;
   height: 68px;
   position: relative;
+  font-family: "AlternateGothicCom-No2", Tahoma, Geneva, sans-serif;
+  color: #b24629;
+  text-transform: uppercase;
+  font-size: 30px;
+  line-height: 68px;
 }
-/* line 244, sass/main.sass */
+/* line 259, sass/main.sass */
 .page-content .page-text h2:after {
   content: "";
   width: 25px;
@@ -429,40 +454,40 @@ main#content .container {
   background-position: 0 0;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 244, sass/main.sass */
+  /* line 259, sass/main.sass */
   .page-content .page-text h2:after {
     background-image: url("../images/site/accordion@2x.png");
     background-size: 25px 98px;
   }
 }
-/* line 256, sass/main.sass */
+/* line 271, sass/main.sass */
 .page-content .page-text h2.active:after {
   top: 20px;
   background-position: 0 bottom;
 }
-/* line 259, sass/main.sass */
+/* line 274, sass/main.sass */
 .page-content .page-text .page-text-block {
   display: none;
   margin: 35px 0;
 }
-/* line 262, sass/main.sass */
+/* line 277, sass/main.sass */
 .page-content .page-text .page-text-block.active {
   display: block;
 }
 
-/* line 265, sass/main.sass */
+/* line 280, sass/main.sass */
 .wine-page-content {
   display: none;
 }
-/* line 267, sass/main.sass */
+/* line 282, sass/main.sass */
 .wine-page-content.active {
   display: block;
 }
-/* line 270, sass/main.sass */
+/* line 285, sass/main.sass */
 .wine-page-content .wine-page-image {
   position: relative;
 }
-/* line 272, sass/main.sass */
+/* line 287, sass/main.sass */
 .wine-page-content .wine-page-image:before {
   content: "";
   display: block;
@@ -477,7 +502,7 @@ main#content .container {
   top: 110px;
   z-index: 0;
 }
-/* line 285, sass/main.sass */
+/* line 300, sass/main.sass */
 .wine-page-content .wine-page-image img {
   float: right;
   margin-right: 5px;
@@ -486,14 +511,14 @@ main#content .container {
   z-index: 1;
 }
 
-/* line 292, sass/main.sass */
+/* line 307, sass/main.sass */
 .wine-browser {
   width: 1000px;
   margin: 0 auto;
   text-align: justify;
   padding-top: 55px;
 }
-/* line 298, sass/main.sass */
+/* line 313, sass/main.sass */
 .wine-browser li {
   display: inline-block;
   width: 160px;
@@ -505,7 +530,7 @@ main#content .container {
   padding-bottom: 15px;
   vertical-align: top;
 }
-/* line 309, sass/main.sass */
+/* line 324, sass/main.sass */
 .wine-browser li:hover:after {
   content: "";
   width: 66px;
@@ -517,32 +542,32 @@ main#content .container {
   left: 50%;
   margin-left: -33px;
 }
-/* line 319, sass/main.sass */
+/* line 334, sass/main.sass */
 .wine-browser li img {
   width: 140px;
   padding: 10px;
 }
-/* line 322, sass/main.sass */
+/* line 337, sass/main.sass */
 .wine-browser li:last-child {
   margin-right: 0;
 }
-/* line 324, sass/main.sass */
+/* line 339, sass/main.sass */
 .wine-browser li.active img {
   padding: 0;
   border: 10px solid #ed8f17;
 }
 @media screen and (min-width: 1180px) {
-  /* line 292, sass/main.sass */
+  /* line 307, sass/main.sass */
   .wine-browser {
     width: 1180px;
     padding-top: 20px;
   }
-  /* line 330, sass/main.sass */
+  /* line 345, sass/main.sass */
   .wine-browser li {
     width: 190px;
     margin-right: 57px;
   }
-  /* line 333, sass/main.sass */
+  /* line 348, sass/main.sass */
   .wine-browser li img {
     width: 170px;
   }
