Formatting home page

--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -195,7 +195,7 @@ footer
     color: #fff
     font-size: 46px
     .banner-headline-container
-      max-width: 900px
+      max-width: 1000px
       margin: 0 auto
       position: relative
       display: table
@@ -224,7 +224,25 @@ footer
     margin-bottom: 40px
   h1
     font-family: $handwriting
+    font-size: 72px
+  #wine h1
     font-size: 94px
+  p
+    font-size: 18px
+    line-height: 28px
+    margin-bottom: 10px
+  strong
+    font-weight: bold
+  em
+    font-style: italic
+  ul
+    padding-left: 25px
+    font-size: 18px
+    line-height: 28px
+    padding-right: 100px
+    li
+      list-style: disc
+      margin-bottom: 10px
 
 .page-content
   &:after
@@ -282,6 +300,10 @@ footer
   &.active
     display: block
   .wine-page-text
+    .wine-specifications
+      padding: 0
+      li
+        list-style: none
   .wine-page-image
     position: relative
     &:before
