--- a/public/css/main.css
+++ b/public/css/main.css
@@ -354,7 +354,7 @@ footer ul li:last-child {
 }
 /* line 197, sass/main.sass */
 .banners .banner .banner-headline-container {
-  max-width: 900px;
+  max-width: 1000px;
   margin: 0 auto;
   position: relative;
   display: table;
@@ -393,10 +393,40 @@ main#content .container {
 /* line 225, sass/main.sass */
 .container h1 {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
+  font-size: 72px;
+}
+/* line 228, sass/main.sass */
+.container #wine h1 {
   font-size: 94px;
 }
-
 /* line 230, sass/main.sass */
+.container p {
+  font-size: 18px;
+  line-height: 28px;
+  margin-bottom: 10px;
+}
+/* line 234, sass/main.sass */
+.container strong {
+  font-weight: bold;
+}
+/* line 236, sass/main.sass */
+.container em {
+  font-style: italic;
+}
+/* line 238, sass/main.sass */
+.container ul {
+  padding-left: 25px;
+  font-size: 18px;
+  line-height: 28px;
+  padding-right: 100px;
+}
+/* line 243, sass/main.sass */
+.container ul li {
+  list-style: disc;
+  margin-bottom: 10px;
+}
+
+/* line 248, sass/main.sass */
 .page-content:after {
   content: "";
   clear: both;
@@ -404,26 +434,26 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 236, sass/main.sass */
+/* line 254, sass/main.sass */
 .page-content .page-image {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 240, sass/main.sass */
+/* line 258, sass/main.sass */
 .page-content .page-image img {
   width: 334px;
 }
-/* line 242, sass/main.sass */
+/* line 260, sass/main.sass */
 .page-content .page-text {
   float: left;
   width: 596px;
 }
-/* line 245, sass/main.sass */
+/* line 263, sass/main.sass */
 .page-content .page-text h1 {
   margin-bottom: 45px;
 }
-/* line 247, sass/main.sass */
+/* line 265, sass/main.sass */
 .page-content .page-text h2 {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -439,7 +469,7 @@ main#content .container {
   font-size: 30px;
   line-height: 68px;
 }
-/* line 259, sass/main.sass */
+/* line 277, sass/main.sass */
 .page-content .page-text h2:after {
   content: "";
   width: 25px;
@@ -454,40 +484,48 @@ main#content .container {
   background-position: 0 0;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 259, sass/main.sass */
+  /* line 277, sass/main.sass */
   .page-content .page-text h2:after {
     background-image: url("../images/site/accordion@2x.png");
     background-size: 25px 98px;
   }
 }
-/* line 271, sass/main.sass */
+/* line 289, sass/main.sass */
 .page-content .page-text h2.active:after {
   top: 20px;
   background-position: 0 bottom;
 }
-/* line 274, sass/main.sass */
+/* line 292, sass/main.sass */
 .page-content .page-text .page-text-block {
   display: none;
   margin: 35px 0;
 }
-/* line 277, sass/main.sass */
+/* line 295, sass/main.sass */
 .page-content .page-text .page-text-block.active {
   display: block;
 }
 
-/* line 280, sass/main.sass */
+/* line 298, sass/main.sass */
 .wine-page-content {
   display: none;
 }
-/* line 282, sass/main.sass */
+/* line 300, sass/main.sass */
 .wine-page-content.active {
   display: block;
 }
-/* line 285, sass/main.sass */
+/* line 303, sass/main.sass */
+.wine-page-content .wine-page-text .wine-specifications {
+  padding: 0;
+}
+/* line 305, sass/main.sass */
+.wine-page-content .wine-page-text .wine-specifications li {
+  list-style: none;
+}
+/* line 307, sass/main.sass */
 .wine-page-content .wine-page-image {
   position: relative;
 }
-/* line 287, sass/main.sass */
+/* line 309, sass/main.sass */
 .wine-page-content .wine-page-image:before {
   content: "";
   display: block;
@@ -502,7 +540,7 @@ main#content .container {
   top: 110px;
   z-index: 0;
 }
-/* line 300, sass/main.sass */
+/* line 322, sass/main.sass */
 .wine-page-content .wine-page-image img {
   float: right;
   margin-right: 5px;
@@ -511,14 +549,14 @@ main#content .container {
   z-index: 1;
 }
 
-/* line 307, sass/main.sass */
+/* line 329, sass/main.sass */
 .wine-browser {
   width: 1000px;
   margin: 0 auto;
   text-align: justify;
   padding-top: 55px;
 }
-/* line 313, sass/main.sass */
+/* line 335, sass/main.sass */
 .wine-browser li {
   display: inline-block;
   width: 160px;
@@ -530,7 +568,7 @@ main#content .container {
   padding-bottom: 15px;
   vertical-align: top;
 }
-/* line 324, sass/main.sass */
+/* line 346, sass/main.sass */
 .wine-browser li:hover:after {
   content: "";
   width: 66px;
@@ -542,32 +580,32 @@ main#content .container {
   left: 50%;
   margin-left: -33px;
 }
-/* line 334, sass/main.sass */
+/* line 356, sass/main.sass */
 .wine-browser li img {
   width: 140px;
   padding: 10px;
 }
-/* line 337, sass/main.sass */
+/* line 359, sass/main.sass */
 .wine-browser li:last-child {
   margin-right: 0;
 }
-/* line 339, sass/main.sass */
+/* line 361, sass/main.sass */
 .wine-browser li.active img {
   padding: 0;
   border: 10px solid #ed8f17;
 }
 @media screen and (min-width: 1180px) {
-  /* line 307, sass/main.sass */
+  /* line 329, sass/main.sass */
   .wine-browser {
     width: 1180px;
     padding-top: 20px;
   }
-  /* line 345, sass/main.sass */
+  /* line 367, sass/main.sass */
   .wine-browser li {
     width: 190px;
     margin-right: 57px;
   }
-  /* line 348, sass/main.sass */
+  /* line 370, sass/main.sass */
   .wine-browser li img {
     width: 170px;
   }
