Changing to cta

--- a/craft/templates/_layout.html
+++ b/craft/templates/_layout.html
@@ -65,8 +65,8 @@
 									<div class="banner-headline">{{ banner.bannerHeadline }}</div>
 								</div>
 								{% if banner.bannerVideo %}
-									<div class="banner-video"  data-featherlight="#video-{{ loop.index }}">
-										<div class="banner-video-interior">
+									<div class="banner-cta banner-video"  data-featherlight="#video-{{ loop.index }}">
+										<div class="banner-cta-interior banner-video-interior">
 											<p>Watch Video</p>
 										</div>
 									</div>
