--- a/public/css/sass/main.sass
+++ b/public/css/sass/main.sass
@@ -211,7 +211,7 @@ footer
       display: table-cell 
       vertical-align: middle 
       text-align: center
-    .banner-video
+    .banner-cta
       font-size: 27px
       font-style: italic
       position: absolute
@@ -220,28 +220,29 @@ footer
       left: 0
       right: 0
       bottom: 65px
-      .banner-video-interior
+      .banner-cta-interior
         display: inline-block
         cursor: pointer
         background-color: $orange
         padding: 25px 40px
         line-height: 42px
-        p
-          position: relative
-          padding-left: 50px
-          top: 1px
-        p:before
-          content: ""
-          width: 42px
-          height: 42px
-          @include hr-image('../images/site/play.png', '../images/site/play@2x.png')
-          background-size: cover
-          background-repeat: no-repeat
-          background-position: 0 0
-          display: inline-block
-          position: absolute
-          left: 0
-          top: -2px
+    .banner-video
+      p
+        position: relative
+        padding-left: 50px
+        top: 1px
+      p:before
+        content: ""
+        width: 42px
+        height: 42px
+        @include hr-image('../images/site/play.png', '../images/site/play@2x.png')
+        background-size: cover
+        background-repeat: no-repeat
+        background-position: 0 0
+        display: inline-block
+        position: absolute
+        left: 0
+        top: -2px
   #wine-page-banner
     background-image: image-url('banners/wine-banner.jpg')
 
