--- a/public/css/main.css
+++ b/public/css/main.css
@@ -466,7 +466,7 @@ footer ul li:last-child {
   text-align: center;
 }
 /* line 214, sass/main.sass */
-.banners .banner .banner-video {
+.banners .banner .banner-cta {
   font-size: 27px;
   font-style: italic;
   position: absolute;
@@ -477,21 +477,21 @@ footer ul li:last-child {
   bottom: 65px;
 }
 /* line 223, sass/main.sass */
-.banners .banner .banner-video .banner-video-interior {
+.banners .banner .banner-cta .banner-cta-interior {
   display: inline-block;
   cursor: pointer;
   background-color: #ed8f17;
   padding: 25px 40px;
   line-height: 42px;
 }
-/* line 229, sass/main.sass */
-.banners .banner .banner-video .banner-video-interior p {
+/* line 230, sass/main.sass */
+.banners .banner .banner-video p {
   position: relative;
   padding-left: 50px;
   top: 1px;
 }
-/* line 233, sass/main.sass */
-.banners .banner .banner-video .banner-video-interior p:before {
+/* line 234, sass/main.sass */
+.banners .banner .banner-video p:before {
   content: "";
   width: 42px;
   height: 42px;
@@ -505,77 +505,77 @@ footer ul li:last-child {
   top: -2px;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 233, sass/main.sass */
-  .banners .banner .banner-video .banner-video-interior p:before {
+  /* line 234, sass/main.sass */
+  .banners .banner .banner-video p:before {
     background-image: url("../images/site/play@2x.png");
     background-size: 42px 42px;
   }
 }
-/* line 245, sass/main.sass */
+/* line 246, sass/main.sass */
 .banners #wine-page-banner {
   background-image: url('/images/banners/wine-banner.jpg?1421107543');
 }
 
-/* line 250, sass/main.sass */
+/* line 251, sass/main.sass */
 .hidden-video {
   height: 450px;
   overflow: hidden;
   display: none;
 }
 
-/* line 257, sass/main.sass */
+/* line 258, sass/main.sass */
 .container {
   width: 1005px;
   margin: 0 auto;
   position: relative;
 }
-/* line 261, sass/main.sass */
+/* line 262, sass/main.sass */
 #home main#content .container {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* line 264, sass/main.sass */
+/* line 265, sass/main.sass */
 main#content .container {
   margin-top: 80px;
   margin-bottom: 40px;
 }
-/* line 267, sass/main.sass */
+/* line 268, sass/main.sass */
 .container h1 {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 72px;
 }
-/* line 270, sass/main.sass */
+/* line 271, sass/main.sass */
 .container #wine h1 {
   font-size: 94px;
 }
-/* line 272, sass/main.sass */
+/* line 273, sass/main.sass */
 .container p {
   font-size: 18px;
   line-height: 28px;
   margin-bottom: 10px;
 }
-/* line 276, sass/main.sass */
+/* line 277, sass/main.sass */
 .container strong {
   font-weight: bold;
 }
-/* line 278, sass/main.sass */
+/* line 279, sass/main.sass */
 .container em {
   font-style: italic;
 }
-/* line 280, sass/main.sass */
+/* line 281, sass/main.sass */
 .container ul {
   padding-left: 25px;
   font-size: 18px;
   line-height: 28px;
   padding-right: 100px;
 }
-/* line 285, sass/main.sass */
+/* line 286, sass/main.sass */
 .container ul li {
   list-style: disc;
   margin-bottom: 10px;
 }
 
-/* line 290, sass/main.sass */
+/* line 291, sass/main.sass */
 .page-content:after {
   content: "";
   clear: both;
@@ -583,26 +583,26 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 296, sass/main.sass */
+/* line 297, sass/main.sass */
 .page-content .page-image {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 300, sass/main.sass */
+/* line 301, sass/main.sass */
 .page-content .page-image img {
   width: 334px;
 }
-/* line 302, sass/main.sass */
+/* line 303, sass/main.sass */
 .page-content .page-text {
   float: left;
   width: 596px;
 }
-/* line 305, sass/main.sass */
+/* line 306, sass/main.sass */
 .page-content .page-text h1 {
   margin-bottom: 35px;
 }
-/* line 307, sass/main.sass */
+/* line 308, sass/main.sass */
 .page-content .page-text h2 {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -618,7 +618,7 @@ main#content .container {
   font-size: 30px;
   line-height: 68px;
 }
-/* line 319, sass/main.sass */
+/* line 320, sass/main.sass */
 .page-content .page-text h2:after {
   content: "";
   width: 25px;
@@ -633,48 +633,48 @@ main#content .container {
   background-position: 0 0;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 319, sass/main.sass */
+  /* line 320, sass/main.sass */
   .page-content .page-text h2:after {
     background-image: url("../images/site/accordion@2x.png");
     background-size: 25px 98px;
   }
 }
-/* line 331, sass/main.sass */
+/* line 332, sass/main.sass */
 .page-content .page-text h2.active:after {
   top: 20px;
   background-position: 0 bottom;
 }
-/* line 334, sass/main.sass */
+/* line 335, sass/main.sass */
 .page-content .page-text .page-text-block {
   display: none;
   margin: 35px 0;
 }
-/* line 337, sass/main.sass */
+/* line 338, sass/main.sass */
 .page-content .page-text .page-text-block.active {
   display: block;
 }
 
-/* line 340, sass/main.sass */
+/* line 341, sass/main.sass */
 .wine-page-content {
   display: none;
 }
-/* line 342, sass/main.sass */
+/* line 343, sass/main.sass */
 .wine-page-content.active {
   display: block;
 }
-/* line 345, sass/main.sass */
+/* line 346, sass/main.sass */
 .wine-page-content .wine-page-text .wine-specifications {
   padding: 0;
 }
-/* line 347, sass/main.sass */
+/* line 348, sass/main.sass */
 .wine-page-content .wine-page-text .wine-specifications li {
   list-style: none;
 }
-/* line 349, sass/main.sass */
+/* line 350, sass/main.sass */
 .wine-page-content .wine-page-image {
   position: relative;
 }
-/* line 351, sass/main.sass */
+/* line 352, sass/main.sass */
 .wine-page-content .wine-page-image:before {
   content: "";
   display: block;
@@ -689,7 +689,7 @@ main#content .container {
   top: 110px;
   z-index: 0;
 }
-/* line 364, sass/main.sass */
+/* line 365, sass/main.sass */
 .wine-page-content .wine-page-image img {
   float: right;
   margin-right: 5px;
@@ -698,14 +698,14 @@ main#content .container {
   z-index: 1;
 }
 
-/* line 371, sass/main.sass */
+/* line 372, sass/main.sass */
 .wine-browser {
   width: 1000px;
   margin: 0 auto;
   text-align: justify;
   padding-top: 55px;
 }
-/* line 377, sass/main.sass */
+/* line 378, sass/main.sass */
 .wine-browser li {
   display: inline-block;
   width: 160px;
@@ -717,7 +717,7 @@ main#content .container {
   padding-bottom: 15px;
   vertical-align: top;
 }
-/* line 388, sass/main.sass */
+/* line 389, sass/main.sass */
 .wine-browser li:hover:after {
   content: "";
   width: 66px;
@@ -729,32 +729,32 @@ main#content .container {
   left: 50%;
   margin-left: -33px;
 }
-/* line 398, sass/main.sass */
+/* line 399, sass/main.sass */
 .wine-browser li img {
   width: 140px;
   padding: 10px;
 }
-/* line 401, sass/main.sass */
+/* line 402, sass/main.sass */
 .wine-browser li:last-child {
   margin-right: 0;
 }
-/* line 403, sass/main.sass */
+/* line 404, sass/main.sass */
 .wine-browser li.active img {
   padding: 0;
   border: 10px solid #ed8f17;
 }
 @media screen and (min-width: 1180px) {
-  /* line 371, sass/main.sass */
+  /* line 372, sass/main.sass */
   .wine-browser {
     width: 1180px;
     padding-top: 20px;
   }
-  /* line 409, sass/main.sass */
+  /* line 410, sass/main.sass */
   .wine-browser li {
     width: 190px;
     margin-right: 57px;
   }
-  /* line 412, sass/main.sass */
+  /* line 413, sass/main.sass */
   .wine-browser li img {
     width: 170px;
   }
