--- a/public/css/main.css
+++ b/public/css/main.css
@@ -193,27 +193,28 @@ header {
 }
 /* line 41, sass/main.sass */
 header .header-container {
-  width: 1440px;
+  width: 1005px;
   margin: 0 auto;
   position: relative;
 }
 /* line 45, sass/main.sass */
 header nav {
   background-color: rgba(0, 0, 0, 0.35);
-  height: 115px;
-  margin-bottom: -115px;
+  height: 140px;
+  margin-bottom: -140px;
   z-index: 1;
   position: relative;
 }
 /* line 51, sass/main.sass */
 header .logo {
-  width: 300px;
-  height: 92px;
+  width: 250px;
+  height: 75px;
   background: url('/images/site/logo.png?1421081585') no-repeat 0 0;
+  background-size: 100%;
   position: absolute;
   left: 50%;
   top: 10px;
-  margin-left: -150px;
+  margin-left: -125px;
 }
 /* line 52, sass/main.sass */
 header .logo h1, header .logo h3 {
@@ -221,80 +222,108 @@ header .logo h1, header .logo h3 {
 }
 /* line 54, sass/main.sass */
 header .logo a {
-  width: 300px;
-  height: 92px;
+  width: 250px;
+  height: 75px;
   display: block;
 }
-/* line 65, sass/main.sass */
+/* line 66, sass/main.sass */
 header .navigation {
-  padding-top: 51px;
+  padding-top: 91px;
   display: inline-block;
   text-align: center;
 }
-/* line 69, sass/main.sass */
+/* line 70, sass/main.sass */
 header .navigation li {
   display: inline-block;
   text-transform: uppercase;
 }
-@media screen and (min-width: 1450px) {
-  /* line 65, sass/main.sass */
+@media screen and (min-width: 1440px) {
+  /* line 66, sass/main.sass */
   header .navigation {
     float: right;
   }
-  /* line 74, sass/main.sass */
+  /* line 75, sass/main.sass */
   header .navigation:first-of-type {
     float: left;
   }
-  /* line 76, sass/main.sass */
+  /* line 77, sass/main.sass */
   header .navigation:first-of-type li {
     margin-left: 68px;
     margin-right: 0;
   }
-  /* line 79, sass/main.sass */
+  /* line 80, sass/main.sass */
   header .navigation li {
     margin-right: 45px;
   }
 }
-/* line 81, sass/main.sass */
+/* line 82, sass/main.sass */
 header .navigation a {
   font-size: 18px;
   color: white;
   text-decoration: none;
   padding-bottom: 10px;
 }
-/* line 86, sass/main.sass */
+/* line 87, sass/main.sass */
 header .navigation a.active {
   border-bottom: 5px solid white;
 }
-/* line 88, sass/main.sass */
+/* line 89, sass/main.sass */
 header .localization {
   position: absolute;
   top: 0;
   right: 45px;
+  font-family: "AlternateGothicCom-No2", Tahoma, Geneva, sans-serif;
+  display: none;
 }
-/* line 92, sass/main.sass */
+/* line 95, sass/main.sass */
 header .localization li {
-  padding: 7px 14px;
+  padding: 9px 12px;
   background: white;
   color: #999999;
   float: left;
   display: block;
 }
-/* line 98, sass/main.sass */
+/* line 101, sass/main.sass */
 header .localization li.active {
   background: #b24629;
 }
-/* line 100, sass/main.sass */
+/* line 103, sass/main.sass */
 header .localization li.active a {
   color: white;
 }
-/* line 102, sass/main.sass */
+/* line 105, sass/main.sass */
 header .localization li a {
   text-decoration: none;
   color: #999999;
 }
+@media screen and (min-width: 1440px) {
+  /* line 109, sass/main.sass */
+  header .header-container {
+    width: 1440px;
+  }
+  /* line 111, sass/main.sass */
+  header nav {
+    height: 115px;
+    margin-bottom: -115px;
+  }
+  /* line 114, sass/main.sass */
+  header .logo {
+    width: 300px;
+    height: 92px;
+    margin-left: -150px;
+  }
+  /* line 115, sass/main.sass */
+  header .logo a {
+    width: 300px;
+    height: 92px;
+  }
+  /* line 121, sass/main.sass */
+  header .navigation {
+    padding-top: 51px;
+  }
+}
 
-/* line 105, sass/main.sass */
+/* line 123, sass/main.sass */
 footer {
   text-align: center;
   text-transform: uppercase;
@@ -302,32 +331,32 @@ footer {
   margin-bottom: 50px;
   font-size: 14px;
 }
-/* line 106, sass/main.sass */
+/* line 124, sass/main.sass */
 #home footer {
   padding-top: 14px;
 }
-/* line 113, sass/main.sass */
+/* line 131, sass/main.sass */
 footer ul {
   margin-bottom: 10px;
 }
-/* line 115, sass/main.sass */
+/* line 133, sass/main.sass */
 footer ul li {
   display: inline-block;
   padding: 0 25px;
   border-right: 1px solid #333333;
 }
-/* line 119, sass/main.sass */
+/* line 137, sass/main.sass */
 footer ul li:last-child {
   border-right: none;
 }
 
-/* line 122, sass/main.sass */
+/* line 140, sass/main.sass */
 .banners {
   height: 100%;
   position: relative;
   z-index: 0;
 }
-/* line 126, sass/main.sass */
+/* line 144, sass/main.sass */
 .banners .banner-arrows {
   position: absolute;
   z-index: 10;
@@ -335,7 +364,7 @@ footer ul li:last-child {
   margin-top: -30px;
   width: 100%;
 }
-/* line 132, sass/main.sass */
+/* line 150, sass/main.sass */
 .banners .banner-arrows li {
   width: 32px;
   height: 60px;
@@ -356,34 +385,34 @@ footer ul li:last-child {
   transition-duration: 0.2s;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 132, sass/main.sass */
+  /* line 150, sass/main.sass */
   .banners .banner-arrows li {
     background-image: url("../images/site/arrows@2x.png");
     background-size: 64px 60px;
   }
 }
-/* line 144, sass/main.sass */
+/* line 162, sass/main.sass */
 .banners .banner-arrows li:hover {
   opacity: 0.6;
 }
-/* line 146, sass/main.sass */
+/* line 164, sass/main.sass */
 .banners .banner-arrows li.previous {
   background-position: top left;
   left: 20px;
 }
-/* line 149, sass/main.sass */
+/* line 167, sass/main.sass */
 .banners .banner-arrows li.next {
   background-position: top right;
   right: 20px;
 }
-/* line 153, sass/main.sass */
+/* line 171, sass/main.sass */
 .banners .banner-dots {
   position: absolute;
   z-index: 10;
   top: 657px;
   left: 50%;
 }
-/* line 158, sass/main.sass */
+/* line 176, sass/main.sass */
 .banners .banner-dots li {
   width: 22px;
   height: 22px;
@@ -394,18 +423,18 @@ footer ul li:last-child {
   margin-right: 8px;
   display: inline-block;
 }
-/* line 167, sass/main.sass */
+/* line 185, sass/main.sass */
 .banners .banner-dots li:last-child {
   margin-right: 0;
 }
-/* line 169, sass/main.sass */
+/* line 187, sass/main.sass */
 .banners .banner-dots li.active {
   border: 3px solid white;
   width: 16px;
   height: 16px;
   background-color: transparent;
 }
-/* line 175, sass/main.sass */
+/* line 193, sass/main.sass */
 .banners.banner_slideshow .banner {
   position: absolute;
   left: 0;
@@ -414,7 +443,7 @@ footer ul li:last-child {
   bottom: 0;
   opacity: 0;
 }
-/* line 182, sass/main.sass */
+/* line 200, sass/main.sass */
 .banners.banner_slideshow .banner.active {
   opacity: 1;
   z-index: 5;
@@ -427,11 +456,11 @@ footer ul li:last-child {
   -o-transition-duration: 1s;
   transition-duration: 1s;
 }
-/* line 187, sass/main.sass */
+/* line 205, sass/main.sass */
 .banners.banner_slideshow .banner.previously_active {
   opacity: 1;
 }
-/* line 189, sass/main.sass */
+/* line 207, sass/main.sass */
 .banners .banner {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -444,11 +473,11 @@ footer ul li:last-child {
   text-align: center;
   color: white;
 }
-/* line 199, sass/main.sass */
+/* line 217, sass/main.sass */
 .banners .banner.with_cta .banner-headline-container {
   height: 70%;
 }
-/* line 201, sass/main.sass */
+/* line 219, sass/main.sass */
 .banners .banner .banner-headline-container {
   max-width: 1000px;
   margin: 0 auto;
@@ -456,7 +485,7 @@ footer ul li:last-child {
   display: table;
   height: 93%;
 }
-/* line 207, sass/main.sass */
+/* line 225, sass/main.sass */
 .banners .banner .banner-headline {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 42px;
@@ -465,9 +494,9 @@ footer ul li:last-child {
   vertical-align: middle;
   text-align: center;
 }
-/* line 214, sass/main.sass */
+/* line 232, sass/main.sass */
 .banners .banner .banner-cta {
-  font-size: 27px;
+  font-size: 24px;
   font-style: italic;
   position: absolute;
   margin-left: auto;
@@ -476,21 +505,21 @@ footer ul li:last-child {
   right: 0;
   bottom: 65px;
 }
-/* line 223, sass/main.sass */
+/* line 241, sass/main.sass */
 .banners .banner .banner-cta .banner-cta-interior {
   display: inline-block;
   cursor: pointer;
   background-color: #ed8f17;
-  padding: 25px 40px;
+  padding: 20px 60px;
   line-height: 42px;
 }
-/* line 230, sass/main.sass */
+/* line 248, sass/main.sass */
 .banners .banner .banner-video p {
   position: relative;
   padding-left: 50px;
   top: 1px;
 }
-/* line 234, sass/main.sass */
+/* line 252, sass/main.sass */
 .banners .banner .banner-video p:before {
   content: "";
   width: 42px;
@@ -505,77 +534,77 @@ footer ul li:last-child {
   top: -2px;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 234, sass/main.sass */
+  /* line 252, sass/main.sass */
   .banners .banner .banner-video p:before {
     background-image: url("../images/site/play@2x.png");
     background-size: 42px 42px;
   }
 }
-/* line 246, sass/main.sass */
+/* line 264, sass/main.sass */
 .banners #wine-page-banner {
   background-image: url('/images/banners/wine-banner.jpg?1421107543');
 }
 
-/* line 251, sass/main.sass */
+/* line 269, sass/main.sass */
 .hidden-video {
   height: 450px;
   overflow: hidden;
   display: none;
 }
 
-/* line 258, sass/main.sass */
+/* line 276, sass/main.sass */
 .container {
   width: 1005px;
   margin: 0 auto;
   position: relative;
 }
-/* line 262, sass/main.sass */
+/* line 280, sass/main.sass */
 #home main#content .container {
   margin-top: 0;
   margin-bottom: 0;
 }
-/* line 265, sass/main.sass */
+/* line 283, sass/main.sass */
 main#content .container {
   margin-top: 80px;
   margin-bottom: 40px;
 }
-/* line 268, sass/main.sass */
+/* line 286, sass/main.sass */
 .container h1 {
   font-family: "Nickyshand", Tahoma, Geneva, sans-serif;
   font-size: 72px;
 }
-/* line 271, sass/main.sass */
+/* line 289, sass/main.sass */
 .container #wine h1 {
   font-size: 94px;
 }
-/* line 273, sass/main.sass */
+/* line 291, sass/main.sass */
 .container p {
   font-size: 18px;
   line-height: 28px;
   margin-bottom: 10px;
 }
-/* line 277, sass/main.sass */
+/* line 295, sass/main.sass */
 .container strong {
   font-weight: bold;
 }
-/* line 279, sass/main.sass */
+/* line 297, sass/main.sass */
 .container em {
   font-style: italic;
 }
-/* line 281, sass/main.sass */
+/* line 299, sass/main.sass */
 .container ul {
   padding-left: 25px;
   font-size: 18px;
   line-height: 28px;
   padding-right: 100px;
 }
-/* line 286, sass/main.sass */
+/* line 304, sass/main.sass */
 .container ul li {
   list-style: disc;
   margin-bottom: 10px;
 }
 
-/* line 291, sass/main.sass */
+/* line 309, sass/main.sass */
 .page-content:after {
   content: "";
   clear: both;
@@ -583,26 +612,26 @@ main#content .container {
   height: 1px;
   display: block;
 }
-/* line 297, sass/main.sass */
+/* line 315, sass/main.sass */
 .page-content .page-image {
   float: right;
   padding-left: 75px;
   width: 334px;
 }
-/* line 301, sass/main.sass */
+/* line 319, sass/main.sass */
 .page-content .page-image img {
   width: 334px;
 }
-/* line 303, sass/main.sass */
+/* line 321, sass/main.sass */
 .page-content .page-text {
   float: left;
   width: 596px;
 }
-/* line 306, sass/main.sass */
+/* line 324, sass/main.sass */
 .page-content .page-text h1 {
   margin-bottom: 35px;
 }
-/* line 308, sass/main.sass */
+/* line 326, sass/main.sass */
 .page-content .page-text h2 {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -618,7 +647,7 @@ main#content .container {
   font-size: 30px;
   line-height: 68px;
 }
-/* line 320, sass/main.sass */
+/* line 338, sass/main.sass */
 .page-content .page-text h2:after {
   content: "";
   width: 25px;
@@ -633,48 +662,48 @@ main#content .container {
   background-position: 0 0;
 }
 @media print, (-webkit-min-device-pixel-ratio: 1.25), (-o-min-device-pixel-ratio: 5 / 4), (min-resolution: 120dpi) {
-  /* line 320, sass/main.sass */
+  /* line 338, sass/main.sass */
   .page-content .page-text h2:after {
     background-image: url("../images/site/accordion@2x.png");
     background-size: 25px 98px;
   }
 }
-/* line 332, sass/main.sass */
+/* line 350, sass/main.sass */
 .page-content .page-text h2.active:after {
   top: 20px;
   background-position: 0 bottom;
 }
-/* line 335, sass/main.sass */
+/* line 353, sass/main.sass */
 .page-content .page-text .page-text-block {
   display: none;
   margin: 35px 0;
 }
-/* line 338, sass/main.sass */
+/* line 356, sass/main.sass */
 .page-content .page-text .page-text-block.active {
   display: block;
 }
 
-/* line 341, sass/main.sass */
+/* line 359, sass/main.sass */
 .wine-page-content {
   display: none;
 }
-/* line 343, sass/main.sass */
+/* line 361, sass/main.sass */
 .wine-page-content.active {
   display: block;
 }
-/* line 346, sass/main.sass */
+/* line 364, sass/main.sass */
 .wine-page-content .wine-page-text .wine-specifications {
   padding: 0;
 }
-/* line 348, sass/main.sass */
+/* line 366, sass/main.sass */
 .wine-page-content .wine-page-text .wine-specifications li {
   list-style: none;
 }
-/* line 350, sass/main.sass */
+/* line 368, sass/main.sass */
 .wine-page-content .wine-page-image {
   position: relative;
 }
-/* line 352, sass/main.sass */
+/* line 370, sass/main.sass */
 .wine-page-content .wine-page-image:before {
   content: "";
   display: block;
@@ -689,7 +718,7 @@ main#content .container {
   top: 110px;
   z-index: 0;
 }
-/* line 365, sass/main.sass */
+/* line 383, sass/main.sass */
 .wine-page-content .wine-page-image img {
   float: right;
   margin-right: 5px;
@@ -698,14 +727,14 @@ main#content .container {
   z-index: 1;
 }
 
-/* line 372, sass/main.sass */
+/* line 390, sass/main.sass */
 .wine-browser {
   width: 1000px;
   margin: 0 auto;
   text-align: justify;
   padding-top: 55px;
 }
-/* line 378, sass/main.sass */
+/* line 396, sass/main.sass */
 .wine-browser li {
   display: inline-block;
   width: 160px;
@@ -717,7 +746,7 @@ main#content .container {
   padding-bottom: 15px;
   vertical-align: top;
 }
-/* line 389, sass/main.sass */
+/* line 407, sass/main.sass */
 .wine-browser li:hover:after {
   content: "";
   width: 66px;
@@ -729,32 +758,32 @@ main#content .container {
   left: 50%;
   margin-left: -33px;
 }
-/* line 399, sass/main.sass */
+/* line 417, sass/main.sass */
 .wine-browser li img {
   width: 140px;
   padding: 10px;
 }
-/* line 402, sass/main.sass */
+/* line 420, sass/main.sass */
 .wine-browser li:last-child {
   margin-right: 0;
 }
-/* line 404, sass/main.sass */
+/* line 422, sass/main.sass */
 .wine-browser li.active img {
   padding: 0;
   border: 10px solid #ed8f17;
 }
 @media screen and (min-width: 1180px) {
-  /* line 372, sass/main.sass */
+  /* line 390, sass/main.sass */
   .wine-browser {
     width: 1180px;
     padding-top: 20px;
   }
-  /* line 410, sass/main.sass */
+  /* line 428, sass/main.sass */
   .wine-browser li {
     width: 190px;
     margin-right: 57px;
   }
-  /* line 413, sass/main.sass */
+  /* line 431, sass/main.sass */
   .wine-browser li img {
     width: 170px;
   }
